#pragma once

namespace ecs_engine
{
enum class EngineState
{
    Idle,
    Running,
    Paused
};
} // namespace ecs_engine
