@startuml engine-core
title SafeCrowd Engine Core Design

skinparam classAttributeIconSize 0
skinparam shadowing false

package "ecs_engine" {
  class EngineRuntime {
    +name() : string_view
    +summary() : string_view
    +state() : EngineState
    +config() : EngineConfig
    +stats() : EngineStats
    +addSystem(system : EngineSystem)
    +start()
    +pause()
    +resume()
    +stop()
    +reset()
    +tick(frameDeltaSeconds : double)
  }

  class FrameClock {
    +config() : EngineConfig
    +lagSeconds() : double
    +reset()
    +advance(frameDeltaSeconds : double) : FramePlan
  }

  class EngineConfig {
    +fixedTimeStepSeconds : double
    +maxFrameDeltaSeconds : double
    +maxCatchUpSteps : size_t
    +isValid() : bool
  }

  class EngineStats {
    +frameCount : uint64_t
    +fixedStepCount : uint64_t
    +wallTimeSeconds : double
    +simulationTimeSeconds : double
    +lagSeconds : double
    +registeredSystems : size_t
  }

  class EngineStepContext {
    +frameIndex : uint64_t
    +stepIndex : uint64_t
    +deltaSeconds : double
    +simulationTimeSeconds : double
  }

  class FramePlan {
    +stepsToRun : size_t
    +frameDeltaSeconds : double
    +fixedTimeStepSeconds : double
    +remainingLagSeconds : double
  }

  abstract class EngineSystem {
    +name() : string_view
    +update(context : EngineStepContext)
  }

  enum EngineState {
    Idle
    Running
    Paused
  }
}

EngineRuntime *-- FrameClock
EngineRuntime *-- EngineStats
EngineRuntime --> EngineState
EngineRuntime o-- "0..*" EngineSystem : updates >
FrameClock --> EngineConfig
FrameClock ..> FramePlan
EngineSystem ..> EngineStepContext

note right of EngineRuntime
  Engine lifecycle and fixed-step loop.
  No domain or UI dependency.
end note

note bottom of EngineSystem
  Runtime does not own domain data.
  Systems are plugged in from outside.
end note

@enduml
